--- a/build.gradle
+++ b/build.gradle
@@ -153,6 +153,8 @@ dependencies {
 
     implementation fg.deobf("curse.maven:blessfulled-1182590:6174088")
 
+    implementation fg.deobf("curse.maven:model-gap-fix-676136:5200949")
+
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
