--- a/build.gradle
+++ b/build.gradle
@@ -158,6 +158,8 @@ dependencies {
     implementation fg.deobf("curse.maven:itemphysic-lite-270441:6045994")
     implementation fg.deobf("curse.maven:creativecore-257814:6109933")
 
+    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
+
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
