--- a/build.gradle
+++ b/build.gradle
@@ -164,6 +164,8 @@ dependencies {
     //implementation fg.deobf("curse.maven:better-combat-by-daedelus-639842:5625757")
     //implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
     //implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
+    //implementation fg.deobf("curse.maven:simply-swords-659887:5639538")
+    //implementation fg.deobf("curse.maven:architectury-api-419699:5137938")
 
     //implementation fg.deobf("curse.maven:epic-fight-mod-405076:6145747")
 
